KBDEV-221 - add text overflow handling on table view to prevent annoying width changes of rows

--- a/src/components/TableComponent/TableComponent.scss
+++ b/src/components/TableComponent/TableComponent.scss
@@ -17,6 +17,11 @@ $flip-duration: 0.15s;
     table {
       min-width: 540px;
       table-layout: fixed;
+      .cell {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
     }
     .table-head {
       tr,
